# py-mail-automator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: config.py  mail_service.py  models.py  reader.py
templates/: email_template.html
tests/: test_mail_service.py  test_models.py  test_reader.py
